--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
 <HEAD>
-<TITLE>Samond Home</TITLE>
+<TITLE>Battlefield AWSL Server</TITLE>
 <META NAME="Author" CONTENT="oscar999">
 <meta http-equiv="refresh" content="0; URL=http://battlefield.now.sh">
 <script>
