--- a/ts/index.html
+++ b/ts/index.html
@@ -61,5 +61,5 @@ function alertSet(e) {
 	}, 970)
 } </script>
 <script type="e0b20d66e664ab9918325e29-text/javascript">alertSet("您被邀请连接到 TeamSpeak 3 服务器:");</script>
-<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="e0b20d66e664ab9918325e29-|49" defer=""></script></body>
+<script src="rocket-loader.min.js" data-cf-settings="e0b20d66e664ab9918325e29-|49" defer=""></script></body>
 </html>
